--- a/src/InsightStream.Infrastructure/InsightStream.Infrastructure.csproj
+++ b/src/InsightStream.Infrastructure/InsightStream.Infrastructure.csproj
@@ -10,6 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.AI.OpenAI" Version="9.9.1-preview.1.25474.6" />
     <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" Version="9.0.9" />
     <PackageReference Include="YoutubeExplode" Version="6.5.5" />
   </ItemGroup>
 
