--- a/src/InsightStream.Application/InsightStream.Application.csproj
+++ b/src/InsightStream.Application/InsightStream.Application.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Extensions.AI" Version="9.0.0-preview.9.24507.7" />
   </ItemGroup>
 
   <PropertyGroup>
