--- a/tests/InsightStream.Application.Tests/InsightStream.Application.Tests.csproj
+++ b/tests/InsightStream.Application.Tests/InsightStream.Application.Tests.csproj
@@ -16,8 +16,11 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.9" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
     <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="OpenAI" Version="2.5.0" />
+    <PackageReference Include="System.ClientModel" Version="1.7.0" />
     <PackageReference Include="xunit" Version="2.9.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.8.2" />
   </ItemGroup>
@@ -27,7 +30,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="../../InsightStream.AppHost/appsettings.Development.json" Link="appsettings.Development.json" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="appsettings.Test.json" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="appsettings.Development.json" CopyToOutputDirectory="PreserveNewest" />
+    <Content Include="../../InsightStream.AppHost/appsettings.Development.json" Link="apphost.appsettings.Development.json" CopyToOutputDirectory="PreserveNewest" />
     <Content Include="../../src/InsightStream.Api/appsettings.Development.json" Link="api.appsettings.Development.json" CopyToOutputDirectory="PreserveNewest" />
   </ItemGroup>
 
